# wtm

./: .gitignore  .mcp.json  .wtm.toml  CLAUDE.md  Cargo.toml  README.md
.claude/skills/verify/: SKILL.md
docs/: gittower-replacement-plan.md
src/: cli.rs  config.rs  conflict.rs  git.rs  main.rs  mcp.rs  ops.rs  output.rs  settings.rs
src/tui/: app.rs  config_editor.rs  help.rs  highlight.rs  mod.rs  setup.rs  ui.rs
tests/: integration.rs
