[package]
name = "wtm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
ratatui = "0.30.2"
rmcp = { version = "2.0.0", features = ["server", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syntect = { version = "5.3", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "regex-fancy",
    "dump-load",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "io-std"] }
toml = "1.1.2"
toml_edit = "0.23"

[dev-dependencies]
tempfile = "3.27.0"
